Lisätty RUD tomintoja backendiin ja muokattu kansiorakennetta

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_NAME=ruokadatabase
+DB_NAME=lahikauppadb
 
 # Sovelluksen asetukset
 APP_ENV=development
